css fix for full width spacing

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/tile-box/tile-box.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/tile-box/tile-box.scss
@@ -193,6 +193,12 @@
     }
   }
 }
+.container-fix__width,
+.default--bg {
+  .tile-boxes-4-0 {
+    padding: toRem(16) 0;
+  }
+}
 
 // *************************************
 // tile boxes slider
